<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_review"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/review"/>
    <item
        android:id="@+id/action_exchange"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/exchange"/>
    <item
        android:id="@+id/action_rectify"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/rectify"/>
    <item
        android:id="@+id/action_sync"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/sync"/>
    <item
        android:id="@+id/action_logout"
        android:showAsAction="never"
        android:title="@string/logout"/>
    <item
        android:id="@+id/action_about"
        android:showAsAction="never"
        android:title="@string/about"/>

</menu>