<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/colum1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/select"
        android:textIsSelectable="true"/>
 	<TextView
        android:id="@+id/colum2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/company_name"
        android:textIsSelectable="true" />
 	
    <LinearLayout
        android:id="@+id/company_header11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/colum3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/company_serial"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/colum4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/company_area"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/colum5"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/company_address"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/colum6"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/responsor"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/colum7"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/colum8"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/secure_manager"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/colum9"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/colum10"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/valid_date"
            android:textIsSelectable="true" />
    </LinearLayout>

</LinearLayout>