<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:gravity="center_vertical"
    android:orientation="horizontal" >
	
    <CheckBox 
        android:id="@+id/checkbox"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/checkbox"
        android:layout_width="100dp"
        android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_time"
            style="@style/enforceTextItem"
            android:layout_marginLeft="29dp"
            android:layout_width="0dp"
        	android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/enforce_time_law"/>

        <TextView
            android:id="@+id/text_paper"
            style="@style/enforceTextItem"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/enforce_form_check"/>

        <TextView
            android:id="@+id/text_paper_no"
            style="@style/enforceTextItem"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/enforce_paper"/>
        

        <TextView
            android:id="@+id/text_officer"
            style="@style/enforceTextItem"
            android:layout_width="0dp"
       		 android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/enforce_officer" />

        <TextView
            android:id="@+id/text_officer_id"
            style="@style/enforceTextItem"
            android:layout_width="0dp"
        	android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/enforce_num_id"/>

		
        <TextView
            android:id="@+id/text_remark"
            style="@style/enforceTextItem"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/remark"/>
        
</LinearLayout>
