<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

     <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:stretchColumns="1,3">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/key_word"/>
            <EditText 
                android:id="@+id/drawer_law_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"/>
       
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"/>
            <Spinner 
                android:id="@+id/drawer_law_type"/>
        </TableRow>
		<TableRow 
             android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <Button 
                android:id="@+id/button_drawer_search"
                android:text="@string/search"
                android:layout_span="2"/>
            <Button 
                android:id="@+id/button_drawer_baidu"
                android:text="@string/baidu"
                android:layout_span="2"/>
        </TableRow>
        
    </TableLayout>

</LinearLayout>