<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    
     <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:stretchColumns="1">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/key_word"/>
            <EditText 
                android:id="@+id/drawer_law_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_span="2"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"/>
            <Spinner 
                android:id="@+id/drawer_law_type"
                android:layout_span="2"/>
        </TableRow>
		<TableRow 
             android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <Button 
                android:id="@+id/button_drawer_search"
                android:text="@string/search"/>
            <Button 
                android:id="@+id/button_drawer_baidu"
                android:text="@string/baidu"/>
        </TableRow>
        
    </TableLayout>
    
</LinearLayout>