<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:stretchColumns="1">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_name"/>
            <EditText 
                android:id="@+id/drawer_text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_span="2"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_type"/>
            <Spinner 
                android:id="@+id/drawer_company_type"
                android:layout_span="2"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_types"/>
            <Spinner 
                android:id="@+id/drawer_search_types"
                android:layout_span="2"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_type"/>
            <Spinner 
                android:id="@+id/drawer_permission_type"
                android:layout_span="2"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_certificate_situ"/>
            <Spinner 
                android:id="@+id/drawer_certificate_situ"
                android:layout_span="2"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"/>
            <Spinner 
                android:id="@+id/drawer_time"/>
            <LinearLayout 
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText 
	                android:id="@+id/drawer_day"
	                android:layout_width="50dp"
	                android:layout_height="wrap_content"
	                android:inputType="number"/>
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="天"/>
            </LinearLayout>
          
        </TableRow>
        <TableRow 
             android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <Button 
                android:id="@+id/button_drawer_search"
                android:text="@string/search"
                android:layout_span="3"/>
        </TableRow>
    </TableLayout>
	
</LinearLayout>