<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_enforcement"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal" >
		<LinearLayout 
		    android:layout_height="match_parent"
		    android:orientation="vertical"
		    style="@style/sidebar">
		     <TextView
		         	style="@style/textTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company_name" />

                <EditText
                    android:id="@+id/enforce_text_name"
                    style="@style/editText"
                    android:inputType="text" />
                <TextView
                    style="@style/textTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company_type" />

                <Spinner 
                    style="@style/spinLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/enforce_spinner_company_type" />
                
                <TextView
                    style="@style/textTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <Spinner
                        style="@style/spinSmall"
                        android:id="@+id/enforce_spinner_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <EditText
                        android:id="@+id/enforce_text_day"
                        style="@style/editTextSmall"
                        android:inputType="number" 
                        android:hint="天数"/>

                </LinearLayout>
                 <Button
                     style="@style/searchButton"
                    android:id="@+id/enforce_button_search" />
		</LinearLayout>
       

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/enforce_list_company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ListView>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>